--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,9 @@
 
 # PostgreSQL Configuration
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=your-secure-password-here
 POSTGRES_DB=ai_studio
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
 # Backend Configuration
