--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Dependencies
 node_modules/
-package-lock.json
-yarn.lock
+# package-lock.json - Keep lock files for reproducible builds
+# yarn.lock
 
 # Build outputs
 dist/
